--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -36,7 +36,7 @@
             <p class="lh-copy-l f5 fw5 black mt0 avenir"> Take your first steps<br> to become more physically active
             </p>
             <div class="cf">
-              <a class="f5 b link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir"
+              <a class="f5 b link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer"
                  @click.prevent="activeModal = 'signup'; openModal()">Sign up here
               </a>
             </div>
