--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -4,8 +4,9 @@
     <div class="w-100 modal-dialog dtc v-mid ph2">
       <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
         <div class="w-100 bg-white  black br3 shadow-default animation">
-          <i class="bg-white h1 w1 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m pa1 z-4 br5 cr"
-             @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png"/></i>
+          <i
+            class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
+            @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
           <div class="cf db o-90">
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
@@ -16,14 +17,16 @@
                 consectetur adipiscing.</p></div>
               <form class="measure center">
                 <fieldset class="ba b--transparent ph0 mh0 pb0">
-                  <div class="mt3">
+                  <div class="mt3 relative">
                     <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
                            name="email-address"
                            v-validate="'required|email'"
                            data-vv-as="email"
                            v-model="email"
-                           placeholder="e-mail"/>
-                    <span v-show="errors.has('email-address')" class="help is-danger absolute left-2 mt1">{{ errors.first('email-address') }}</span>
+                           required/>
+                    <span class="bar"></span>
+                    <label class="f6-ns fw5 avenir">E-mail</label>
+                    <span v-show="errors.has('email-address')" class="help is-danger absolute left-0 mt1">{{ errors.first('email-address') }}</span>
                   </div>
                 </fieldset>
                 <div class="cf w-100 mt4">
