--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -1,88 +1,99 @@
-<section class="modal-signin fade" :class="{'show': activeStatus, 'd-block': activeStatus}" @click.prevent="closeModal($event)">
+<section class="modal-signin fade" :class="{'show': activeStatus, 'd-block': activeStatus}"
+         @click.prevent="closeModal($event)">
   <section class="modal-frame h-100 dt">
-      <div class="w-100 modal-dialog dtc v-mid ph0-l ph0-m ph2"
-           @click.prevent="$event.stopPropagation()">
-        <div class="w-100 bg-white pv0-l pv0-m pv4  black br3 shadow-default animation">
-          <i class="bg-white h1 w1 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m pa1 z-4 br5 pointer"
-             @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png"/></i>
-          <div class="cf db o-90">
-            <div class="fl  w-100 w-50-l w-50-m pa4 avenir">
-              <div class="cf w-100">
-                <div class="w-50 fl f4 fw5 navy tl">Sign Up</div>
-                <div class="w-50 fr f6 fw6 blue tr mt2" @click.prevent="openSignIn($event)">SIGN IN</div>
-              </div>
-              <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
-                consectetur adipiscing.</p></div>
-              <form class="measure center">
-                <fieldset class="ba b--transparent ph0 mh0 pb0 mt0 pt0">
-                  <div class=" w-100 tl">
-                    <div class="cf w-100">
-                    <div class="w-50 fl pr2">
+    <div class="w-100 modal-dialog dtc v-mid ph0-l ph0-m ph2"
+         @click.prevent="$event.stopPropagation()">
+      <div class="w-100 bg-white pv0-l pv0-m pv4  black br3 shadow-default animation">
+        <i class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
+           @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
+        <div class="cf db o-90">
+          <div class="fl  w-100 w-50-l w-50-m pa4 avenir">
+            <div class="cf w-100">
+              <div class="w-50 fl f4 fw5 navy tl">Sign Up</div>
+              <div class="w-50 fr f6 fw6 blue tr mt2 pointer" @click.prevent="openSignIn($event)">SIGN IN</div>
+            </div>
+            <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
+              consectetur adipiscing.</p></div>
+            <form class="measure center">
+              <fieldset class="ba b--transparent ph0 mh0 pb0 mt0 pt0">
+                <div class=" w-100 tl relative">
+                  <div class="cf w-100">
+                    <div class="w-50 fl pr2 relative">
                       <input class="pv2 input-reset bg-transparent navy bb b--black-20  br-0 bl-0 bt-0 w-100"
                              name="fname"
                              data-vv-as="first name"
                              v-validate="'required|alpha'"
                              v-model="fname"
-                             placeholder="First Name"/>
+                             required/>
+                      <span class="bar"></span>
+                      <label class="f6-ns fw5 avenir">First Name</label>
                     </div>
-                      <div class="w-50 fl pl2">
+                    <div class="w-50 fl pl2 relative">
                       <input class="pv2 input-reset bg-transparent navy bb b--black-20  br-0 bl-0 bt-0 w-100"
                              name="lname"
                              data-vv-as="last name"
                              v-validate="'required|alpha'"
-                             v-model="lname"
-                             placeholder="Last Name"/>
+                             v-model="lname" required/>
+
+                      <span class="bar"></span>
+                      <label class="f6-ns fw5 avenir ml2-ns">Last Name</label>
                     </div>
-                    </div>
-                    <span v-show="errors.has('fname') || errors.has('lname')" class="help is-danger absolute left-2 mt1">{{ errors.first('fname') || errors.first('lname') }}</span>
                   </div>
-                  <div class="mt4 tl">
-                    <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
-                           name="email-address"
-                           v-validate="'required|email'"
-                           data-vv-as="email"
-                           v-model="email"
-                           placeholder="Email"/>
-                    <span v-show="errors.has('email-address')" class="help is-danger absolute left-2 mt1">{{ errors.first('email-address') }}</span>
-                  </div>
-                  <div class="mt4 tl">
-                    <input
-                      class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100"
-                      type="password"
-                      v-validate="'required|alpha_num'"
-                      data-vv-as="password"
-                      name="password"
-                      v-model="password"
-                      placeholder="Password"/>
-                    <span v-show="errors.has('password')" class="help is-danger absolute left-2 mt1">{{ errors.first('password') }}</span>
-                  </div>
-                  <div class="mt4 tl">
-                    <input
-                      class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 bg-transparent w-100"
-                      type="password"
-                      v-validate="'required|confirmed:password'"
-                      name="cpassword"
-                      data-vv-as="password"
-                      placeholder="Confirm Password"/>
-                    <span v-show="errors.has('cpassword')" class="help is-danger absolute left-2 mt1">{{ errors.first('cpassword') }}</span>
-                  </div>
-                </fieldset>
-                <div class="cf w-100 mt4">
-                  <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100"
-                     @click.prevent="signUp($event)">SIGN UP</a>
+                  <span v-show="errors.has('fname') || errors.has('lname')" class="help is-danger absolute left-0 mt1">{{ errors.first('fname') || errors.first('lname') }}</span>
                 </div>
-                <div class="cf w-100 mt2">
-                  <a class="f6 fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
-                    CONNECT</a>
+                <div class="mt4 relative">
+                  <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
+                         name="email-address"
+                         v-validate="'required|email'"
+                         data-vv-as="email"
+                         v-model="email"
+                         required/>
+                  <span class="bar"></span>
+                  <label class="f6-ns fw5 avenir">Email</label>
+                  <span v-show="errors.has('email-address')" class="help is-danger absolute left-0 mt1">{{ errors.first('email-address') }}</span>
                 </div>
-              </form>
-            </div>
-            <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m min-height-560">
-              <div class=" br-100 pa1 bg-light-blue h5 w5 o-20 center pa5 ma5 mb4">
+                <div class="mt4 relative">
+                  <input
+                    class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100"
+                    type="password"
+                    v-validate="'required|alpha_num'"
+                    data-vv-as="password"
+                    name="password"
+                    v-model="password"
+                    required/>
+                  <span class="bar"></span>
+                  <label class="f6-ns fw5 avenir">Password</label>
+                  <span v-show="errors.has('password')" class="help is-danger absolute left-0 mt1">{{ errors.first('password') }}</span>
+                </div>
+                <div class="mt4 relative">
+                  <input
+                    class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 bg-transparent w-100"
+                    type="password"
+                    v-validate="'required|confirmed:password'"
+                    name="cpassword"
+                    data-vv-as="password"
+                    required/>
+                  <span class="bar"></span>
+                  <label class="f6-ns fw5 avenir">Confirm Password</label>
+                  <span v-show="errors.has('cpassword')" class="help is-danger absolute left-0 mt1">{{ errors.first('cpassword') }}</span>
+                </div>
+              </fieldset>
+              <div class="cf w-100 mt4">
+                <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100 pointer"
+                   @click.prevent="signUp($event)">SIGN UP</a>
               </div>
+              <div class="cf w-100 mt2">
+                <a class="f6 fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
+                  CONNECT</a>
+              </div>
+            </form>
+          </div>
+          <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m min-height-560">
+            <div class=" br-100 pa1 bg-light-blue h5 w5 o-20 center pa5 ma5 mb4">
             </div>
           </div>
         </div>
       </div>
+    </div>
   </section>
 </section>
