--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -1,9 +1,11 @@
 <div class="wrapper avenir">
-  <header class="cf w-100 pl3 pr3 ph0-ns bg-white">
-    <div class="w-100 w-80-ns center">
-      <h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>
-    </div>
-  </header>
+  <!--<header class="cf w-100 pl3 pr3 ph0-ns bg-white">-->
+  <!--<div class="w-100 w-80-ns center">-->
+  <!--<h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>-->
+  <!--</div>-->
+  <!--</header>-->
+  <span style="position: absolute;display: block;right: 20px;"><a
+    class="small-font fw6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" style="cursor: pointer" @click="logout()">logout</a></span>
   <section class="cf w-100 ph0 ph6-l pt5 gradient-blue">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="w-100 bg-white black br3 mb4">
@@ -90,9 +92,9 @@
               <li
                 class="flex items-center lh-copy pa4 ph0-l bb b--black-05">
                 <b class="db f3 mb1 w-50 w-70-l w-70-m fl navy pl2 pl4-m pl4-l">Activity log</b>
-                <a href=""
-                   class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE
-                  ALL ACTIVITIES</a>
+                <!--<a href=""-->
+                   <!--class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE-->
+                  <!--ALL ACTIVITIES</a>-->
               </li>
               <li
                 class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
