--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -97,15 +97,16 @@
                   <!--ALL ACTIVITIES</a>-->
               </li>
               <li
-                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 "v-for="(list, i) in userChallengeStateList">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
-                  <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
-                  <span class="f6 f4-m f4-l fw5 db color-light">Enjoy a short walk to power your brain</span>
+                  <span class="f5 fw5 db color-light">Program 1 Day {{i}} - 01/08</span>
+                  <span class="f6 f4-m f4-l fw5 db color-light">{{list.challenge.shortDescription}}</span>
+                  <span class="f6 f4-m f4-l fw5 db color-light">{{list.status}}</span>
                 </div>
               </li>
-              <li
-                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
+              <!--<li
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b&#45;&#45;black-05 ">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
                   <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
@@ -119,7 +120,7 @@
                   <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
                   <span class="f6 f4-m f4-l fw5 db color-light">Enjoy a short walk to power your brain</span>
                 </div>
-              </li>
+              </li>-->
 
             </ul>
           </div>
