--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -11,7 +11,7 @@
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
                 <div class="w-60 fl f4 fw5 navy tl">Forget password</div>
-                <div class="w-40 fr f6 fw6 blue tr mt2" @click.prevent="openSignIn($event)">SIGN IN</div>
+                <div class="w-40 fr f6 fw6 blue tr mt2 pointer" @click.prevent="openSignIn($event)">SIGN IN</div>
               </div>
               <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
                 consectetur adipiscing.</p></div>
