--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -92,12 +92,15 @@
               <li
                 class="flex items-center lh-copy pa4 ph0-l bb b--black-05">
                 <b class="db f3 mb1 w-50 w-70-l w-70-m fl navy pl2 pl4-m pl4-l">Activity log</b>
+
                 <!--<a href=""-->
                    <!--class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE-->
                   <!--ALL ACTIVITIES</a>-->
               </li>
+              <li class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05" v-if="!userChallengeStateList.length">No activity found</li>
+
               <li
-                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 "v-for="(list, i) in userChallengeStateList">
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 " v-for="(list, i) in userChallengeStateList">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
                   <span class="f5 fw5 db color-light">Program 1 Day {{i}} - 01/08</span>
@@ -123,6 +126,7 @@
               </li>-->
 
             </ul>
+
           </div>
         </div>
       </div>
