--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -223,21 +223,19 @@
       <div class="cf">
         <div class="fl w-100 w-50-l w-50-m avenir">
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
-            Reach us
+            Reach us <a class="f6 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
           </h3>
-          <p class="f6 fw5 white mt1"><a class="no-underline underline-hover white" href="mailto:activepathways@smartplayds.com">(mailto: activepathways@smartplayds.com)</a></p>
-          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
-            Join our community on Facebook
+          <!--<p class="f6 fw5 white mt1">-->
+            <!--<a class="f6 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a></p>-->
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
+            Join our community on <a href="https://www.facebook.com/getwalkers/"
+                                     class=" white underline" target="_blank">Facebook</a>
           </h3>
-          <p class="f6 fw5 white mt1">(link) <a href="https://www.facebook.com/getwalkers/"
-                                                class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</a>
-          </p>
         </div>
         <div class="fl w-100 w-50-l w-50-m">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
             SMARTplayds Limited</h3>
-          <p class="f6 fw5 white mt2">Collaborate Works - Steward House
-            <router-link tag="a" :to="{ name: 'landingpage' }" class="underline white">14 Commercial Way</router-link>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <span class="underline">14 Commercial Way</span>
           </p>
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
