add header menu bar scrolltop in body component

--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -4,9 +4,9 @@
       <nav class="pt3 dt w-100 mw8 center bb nav-border-b
 ">
         <div class="w-20 fl pa2 tl ">
-          <router-link :to="{ name: 'landingpage' }" class="no-underline">
+          <a href="" class="no-underline">
             <img src="../../assets/images/site-logo.png"/>
-          </router-link>
+          </a>
         </div>
         <div class="fl w-80 pa3 pr0 tr menu-header">
           <a class="f4 f5-m f3-l b dn dib-ns pv2 pt2-m ml4 mt1-m active">
