--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -223,10 +223,8 @@
       <div class="cf">
         <div class="fl w-100 w-50-l w-50-m avenir">
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
-            Reach us <a class="f6 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
+            Reach us <a class="f5 pl2 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
           </h3>
-          <!--<p class="f6 fw5 white mt1">-->
-            <!--<a class="f6 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a></p>-->
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
             Join our community on <a href="https://www.facebook.com/getwalkers/"
                                      class=" white underline" target="_blank">Facebook</a>
