--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -24,21 +24,21 @@
                 Well done, how do you feel about it?
               </p>
               <div class="cf db">
-                <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
-                </a>
-                <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
-                </a>
-                <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
-                </a>
-                <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
-                </a>
-                <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
-                </a>
+                <span class=" dib mr1" href="#" title="">
+                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                </span>
+                <span class=" dib mr1" href="#" title="">
+                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                </span>
+                <span class="dib mr1" href="#" title="">
+                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                </span>
+                <span class="dib mr1" href="#" title="">
+                  <img src="../../assets/images/smile4selected.svg" class="w2"/>
+                </span>
+                <span class="dib mr1" href="#" title="">
+                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                </span>
               </div>
               <div>
                 <a class="f6 fw5 link dim br-pill ph4 mb2 mt4 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
