--- a/service-web/src/components/header/header.css
+++ b/service-web/src/components/header/header.css
@@ -4,9 +4,11 @@
   margin-bottom: -18px;
   text-decoration: none;
 }
+
 .menu-header a:hover {
   color: #408BC9;
 }
+
 .menu-header a:hover:after {
   color: #408BC9;
   content: "";
@@ -18,9 +20,11 @@
   margin-bottom: -25px;
   border-radius: 100px;
 }
+
 .menu-header a.active {
   color: #408BC9;
 }
+
 .menu-header a.active:after {
   color: #408BC9;
   content: "";
@@ -39,4 +43,102 @@
   background-size: cover;
   width: 100%;
   background-repeat: no-repeat;
+}
+
+.desktop-menu {
+  display: block;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+.mobile-menu a:hover:after {
+  background-color: transparent;
+}
+
+.menu-expanded {
+  position: fixed;
+  top: 4%;
+  right: 5%;
+  height: 14px;
+  width: 20px;
+  display: none;
+  cursor: pointer;
+  z-index: 100;
+  transition: opacity 0.25s ease;
+}
+
+.menu-expanded span:nth-of-type(2) {
+  top: 6px;
+}
+
+.menu-expanded span:nth-of-type(3) {
+  top: 12px;
+}
+
+.menu-expanded.active .bottom {
+  transform: translateY(-11px) translateX(0) rotate(-45deg);
+}
+
+.menu-expanded.active .top {
+  transform: translateY(1px) translateX(0) rotate(45deg);
+}
+
+.menu-expanded.active .middle {
+  opacity: 0;
+}
+
+.overlay {
+  left: -240px;
+  width: 240px;
+  transition: all 0.6s ease;
+  overflow: hidden;
+  z-index: 55;
+  visibility: hidden;
+}
+
+.overlay.open {
+  left: 0;
+  visibility: visible;
+}
+
+.overlay.open:valid ~ body {
+  overflow: hidden;
+}
+
+/*----toggle----*/
+.menu-expanded span {
+  background: #001b44;
+  border: none;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all .35s ease;
+  cursor: pointer;
+}
+
+@media (max-width: 588px) {
+  .desktop-menu {
+    display: none;
+  }
+
+  .mobile-expanded {
+    display: block;
+  }
+
+  .menu-expanded {
+    display: block;
+  }
+
+  .fixed-header-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 66;
+    background-color: rgba(255, 255, 255, 0.9882352941176471);
+  }
 }
