--- a/service-web/src/components/header/header.css
+++ b/service-web/src/components/header/header.css
@@ -56,6 +56,7 @@
 .mobile-menu a:hover:after {
   background-color: transparent;
 }
+/*
 
 .menu-expanded {
   position: fixed;
@@ -103,12 +104,81 @@
   visibility: visible;
 }
 
-.overlay.open:valid ~ body {
+.overlay.open:valid body {
   overflow: hidden;
 }
 
-/*----toggle----*/
+!*----toggle----*!
 .menu-expanded span {
+  background: #001b44;
+  border: none;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all .35s ease;
+  cursor: pointer;
+}
+*/
+body.modal-open {
+  overflow: hidden;
+}
+body.modal-open .bg-overlay {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2222;
+  padding: 30px;
+  background-color: rgba(0, 27, 68, 0.22);
+  transition: all 0.6s ease;
+}
+.mobile-expanded-nav {
+  position: fixed;
+  width: 240px;
+  top: 0;
+  bottom: 0;
+  left: -240px;
+  z-index: 3333;
+  padding: 30px;
+  background-color: #001b44;
+  transition: all 0.6s ease;
+}
+.mobile-expanded-nav.isOpen {
+  left: 0;
+}
+.hamburger-toggle span:nth-of-type(2) {
+  top: 6px;
+}
+.hamburger-toggle span:nth-of-type(3) {
+  top: 12px;
+}
+.hamburger-toggle.active .bottom {
+  transform: translateY(-11px) translateX(0) rotate(-45deg);
+  background: #001b44;
+}
+.hamburger-toggle.active .top {
+  transform: translateY(1px) translateX(0) rotate(45deg);
+  background: #001b44;
+}
+.hamburger-toggle.active .middle {
+  opacity: 0;
+}
+.hamburger-toggle {
+  position: fixed;
+  top: 4%;
+  right: 5%;
+  height: 14px;
+  width: 20px;
+  display: none;
+  cursor: pointer;
+  z-index: 100;
+  transition: opacity 0.25s ease;
+}
+.hamburger-toggle span {
   background: #001b44;
   border: none;
   height: 2px;
@@ -125,11 +195,10 @@
     display: none;
   }
 
-  .mobile-expanded {
+  .mobile-expanded-nav {
     display: block;
   }
-
-  .menu-expanded {
+  .hamburger-toggle {
     display: block;
   }
 
