--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -1,9 +1,9 @@
 <header class="avenir h-100 " v-if="!showHeader">
   <div class=" header-baner">
     <div class=" pb5 pb6-m pb7-l  ph3 ph3-m ph3-l relative vh-75 vh-100-m vh-100-l">
-      <nav class="fixed-header-mobile pt3 dt w-100 mw8 center bb nav-border-b
+      <nav class="fixed-header-mobile pt3 pb3 pb0-ns pt3-ns dt w-100 mw8 center bb nav-border-b
 ">
-        <div class="w-20 fl pa2 tl ">
+        <div class="w-20 fl ml3 ml0-ns tl pa2-ns">
           <a href="" class="no-underline">
             <img src="../../assets/images/site-logo.png"/>
           </a>
@@ -28,34 +28,31 @@
           </div>
         </div>
         <div class="mobile-expanded">
-          <div class="menu-expanded" v-on:click='isOpen = !isOpen' v-bind:class="{active: isOpen}">
-            <span class="top"></span><span class="middle"></span><span
-            class="bottom"></span>
+          <div class="mobile-expanded-nav"
+               :class="{ isOpen: isOpen }">
+            <div class="hamburger-toggle" v-bind:class="{active: isOpen}"
+                 @click="toggle"><span class="top"></span><span class="middle"></span><span
+              class="bottom"></span></div>
+            <div class="ml3 pl1 mb5"><img src="../../assets/images/logo-icon.png" class="fl"/><span
+              class="f5 fw7 white dt-ca mt2">Active Pathways</span></div>
+            <a href="" class="w-100 f4 fw5 db white no-underline tl pb3">
+              Home
+            </a>
+            <a href=""
+               class="w-100 f4 fw5 db white no-underline tl pb3" v-scroll-to="'#features'">How it works
+            </a>
+            <a href="" v-scroll-to="'#saying'" class="w-100 f4 fw5 db pb3 white no-underline tl">
+              Testimonials
+            </a>
+            <a class="w-100 f4 fw5 db white no-underline pb3 tl"
+               @click.prevent="activeModal = 'signup'; openModal()">
+              Sign up
+            </a>
+            <a class="w-100 f4 fw5 db white no-underline pb2 tl">
+              Sign in
+            </a>
           </div>
-          <div class="overlay bg-navy fixed top-0 bottom-0" v-bind:class="{open: isOpen}">
-            <div class="overlay-item" v-if="!isLoggedIn">
-              <div class="overlay-list avenir pt4 pl4">
-                <div class="ml3 pl1 mb5"><img src="../../assets/images/logo-icon.png" class="fl"/><span
-                  class="f5 fw7 white dt-ca mt2">Active Pathways</span></div>
-                <a href="" class="w-100 f4 fw5 db white no-underline tl pb3">
-                  Home
-                </a>
-                <a href=""
-                   class="w-100 f4 fw5 db white no-underline tl pb3" v-scroll-to="'#features'">How it works
-                </a>
-                <a href="" v-scroll-to="'#saying'" class="w-100 f4 fw5 db pb3 white no-underline tl">
-                  Testimonials
-                </a>
-                <a class="w-100 f4 fw5 db white no-underline pb3 tl"
-                   @click.prevent="activeModal = 'signup'; openModal()">
-                  Sign up
-                </a>
-                <a class="w-100 f4 fw5 db white no-underline pb2 tl">
-                  Sign in
-                </a>
-              </div>
-            </div>
-          </div>
+          <div class="bg-overlay"></div>
         </div>
       </nav>
       <section class="hero ph3 w-40">
