--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -108,7 +108,12 @@ input::-webkit-input-placeholder {
 .shadow-default {
   box-shadow: 0px 0px 28px 3px #00000033;
 }
-
+body.overlay-bg {
+  overflow: hidden;
+}
+body.modal-open .bg-overlay, body.modal-open .mobile-expanded-nav {
+  display: none;
+}
 /*---modal--Libray-----*/
 .animation {
   position: relative;
