--- a/service-web/src/components/header/header.css
+++ b/service-web/src/components/header/header.css
@@ -56,75 +56,7 @@
 .mobile-menu a:hover:after {
   background-color: transparent;
 }
-/*
-
-.menu-expanded {
-  position: fixed;
-  top: 4%;
-  right: 5%;
-  height: 14px;
-  width: 20px;
-  display: none;
-  cursor: pointer;
-  z-index: 100;
-  transition: opacity 0.25s ease;
-}
-
-.menu-expanded span:nth-of-type(2) {
-  top: 6px;
-}
-
-.menu-expanded span:nth-of-type(3) {
-  top: 12px;
-}
-
-.menu-expanded.active .bottom {
-  transform: translateY(-11px) translateX(0) rotate(-45deg);
-}
-
-.menu-expanded.active .top {
-  transform: translateY(1px) translateX(0) rotate(45deg);
-}
-
-.menu-expanded.active .middle {
-  opacity: 0;
-}
-
-.overlay {
-  left: -240px;
-  width: 240px;
-  transition: all 0.6s ease;
-  overflow: hidden;
-  z-index: 55;
-  visibility: hidden;
-}
-
-.overlay.open {
-  left: 0;
-  visibility: visible;
-}
-
-.overlay.open:valid body {
-  overflow: hidden;
-}
-
-!*----toggle----*!
-.menu-expanded span {
-  background: #001b44;
-  border: none;
-  height: 2px;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all .35s ease;
-  cursor: pointer;
-}
-*/
-body.modal-open {
-  overflow: hidden;
-}
-body.modal-open .bg-overlay {
+body.overlay-bg .bg-overlay {
   position: fixed;
   width: 100%;
   top: 0;
@@ -134,7 +66,7 @@ body.modal-open .bg-overlay {
   z-index: 2222;
   padding: 30px;
   background-color: rgba(0, 27, 68, 0.22);
-  transition: all 0.6s ease;
+  transition: all 0.7s ease;
 }
 .mobile-expanded-nav {
   position: fixed;
@@ -145,7 +77,7 @@ body.modal-open .bg-overlay {
   z-index: 3333;
   padding: 30px;
   background-color: #001b44;
-  transition: all 0.6s ease;
+  transition: all 0.4s ease;
 }
 .mobile-expanded-nav.isOpen {
   left: 0;
