--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -10,11 +10,11 @@
         </div>
         <div class="fl w-80 pa3 pr0 tr menu-header desktop-menu">
           <div class="">
-            <a class="f4 f5-m f3-l b dib-ns pv2 pt2-m ml4 mt1-m active">
+            <a class="f4 f5-m f3-l b dib-ns pv2 pt2-m ml0-m ml4-l mt1-m">
               Home
             </a>
             <a href=""
-               class="f4 f5-m f3-l b dib-ns pv2 ml4 " v-scroll-to="'#features'">How it works
+               class="f4 f5-m f3-l b dib-ns pv2 ml3-m ml4-l mt1-m " v-scroll-to="'#features'">How it works
             </a>
             <a href="" v-scroll-to="'#saying'" class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer">
               Testimonials
