--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -1,6 +1,6 @@
 <section class="modal-signin fade " :class="{'show': activeStatus, 'd-block': activeStatus}"
          @click.prevent="closeModal($event)">
-  <section class="modal-frame h-100 dt">
+  <section class="modal-frame h-100 dt ph2 ph2-m ph0-l pt4-m pv0-l">
     <div class="w-100 modal-dialog dtc v-mid ph2">
       <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
         <div class="w-100 bg-white  black br3 shadow-default animation">
