--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -1,6 +1,6 @@
 <section class="modal-signin fade" :class="{'show': activeStatus, 'd-block': activeStatus}"
          @click.prevent="closeModal($event)">
-  <section class="modal-frame h-100 dt">
+  <section class="modal-frame h-100 dt ph3 ph3-m ph0-l pt4-m pv0-l">
     <div class="w-100 modal-dialog dtc v-mid ph0-l ph0-m ph2"
          @click.prevent="$event.stopPropagation()">
       <div class="w-100 bg-white pv0-l pv0-m pv4  black br3 shadow-default animation">
