--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -218,6 +218,10 @@
       </div>
     </div>
   </section>
+  <div class="back-to-top-btn">
+    <vm-back-top :bottom="100" :duration="1000" :timing="'ease'" class="blue-dark-color">
+    <div class="top"><i class="up-arrow"></i></div>
+  </vm-back-top></div>
   <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
     <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
       <div class="cf">
