--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -22,7 +22,7 @@
             <a class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer" @click.prevent="activeModal = 'signup'; openModal()">
               Sign up
             </a>
-            <a class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer">
+            <a class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer" @click.prevent="activeModal = 'signin'; openModal()">
               Sign in
             </a>
           </div>
