add mood icon challenge page and remove home menu item header bar

--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -24,20 +24,25 @@
                 Well done, how do you feel about it?
               </p>
               <div class="cf db">
-                <span class=" dib mr1" href="#" title="">
-                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                <span class=" dib mr1 mood-icons">
+                  <img src="../../assets/images/smile1.svg" alt="Mountains" class="smile-mood-icon w2"/>
+                  <img src="../../assets/images/smile1selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
                 </span>
-                <span class=" dib mr1" href="#" title="">
-                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                <span class=" dib mr1 mood-icons">
+                  <img src="../../assets/images/smile2.svg" alt="Mountains" class="smile-mood-icon w2"/>
+                  <img src="../../assets/images/smile2selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
                 </span>
-                <span class="dib mr1" href="#" title="">
-                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                <span class=" dib mr1 mood-icons">
+                  <img src="../../assets/images/smile3.svg" alt="Mountains" class="smile-mood-icon w2"/>
+                  <img src="../../assets/images/smile3selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
                 </span>
-                <span class="dib mr1" href="#" title="">
-                  <img src="../../assets/images/smile4selected.svg" class="w2"/>
+                <span class=" dib mr1 mood-icons">
+                  <img src="../../assets/images/smile4.svg" alt="Mountains" class="smile-mood-icon w2"/>
+                  <img src="../../assets/images/smile4selected.svg" alt="" class="selected-smile-icon hvr-smile-icon active-mood-icon"/>
                 </span>
-                <span class="dib mr1" href="#" title="">
-                  <img src="../../assets/images/smile4.svg" class="w2"/>
+                <span class=" dib mr1 mood-icons">
+                  <img src="../../assets/images/smile5.svg" alt="Mountains" class="smile-mood-icon w2"/>
+                  <img src="../../assets/images/smile5selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
                 </span>
               </div>
               <div>
