--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -317,8 +317,6 @@ label 				 {
 }
 input:focus ~ label, input:valid ~ label 		{
   top:-10px;
-  /*font-size:12px;*/
-  /*color:#001d46;*/
   opacity: 0;
 }
 .bar 	{ position:relative; display:block; width:100%; }
@@ -343,6 +341,45 @@ input:focus ~ label, input:valid ~ label 		{
 input:focus ~ .bar:before, input:focus ~ .bar:after {
   width:50%;
 }
+/*-----mood icon---*/
+
+.mood-icons {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  max-width: 100%;
+  height: 100%;
+}
+.mood-icons .smile-mood-icon {
+  display: block;
+}
+.mood-icons .selected-smile-icon {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -ms-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+.mood-icons:hover .selected-smile-icon{
+  opacity: 1;
+  cursor: pointer;
+}
+.mood-icons .selected-smile-icon.active-mood-icon {
+  opacity: 1;
+}
+.mood-icons .hvr-smile-icon {
+  padding: 0;
+  background: none;
+}
+
 @media screen and (max-width: 480px) {
   .welcome-bg {
     background-color: rgba(255, 255, 255, 0.85);
