--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -10,19 +10,16 @@
         </div>
         <div class="fl w-80 pa3 pr0 tr menu-header desktop-menu">
           <div class="">
-            <a class="f4 f5-m f3-l b dib-ns pv2 pt2-m ml0-m ml4-l mt1-m">
-              Home
-            </a>
             <a href=""
-               class="f4 f5-m f3-l b dib-ns pv2 ml3-m ml4-l mt1-m " v-scroll-to="'#features'">How it works
+               class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns mt1-m " v-scroll-to="'#features'">How it works
             </a>
-            <a href="" v-scroll-to="'#saying'" class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer">
+            <a href="" v-scroll-to="'#saying'" class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer">
               Testimonials
             </a>
-            <a class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer" @click.prevent="activeModal = 'signup'; openModal()">
+            <a class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer" @click.prevent="activeModal = 'signup'; openModal()">
               Sign up
             </a>
-            <a class="f4 f5-m f3-l b dib-ns pv2 ml4 pointer" @click.prevent="activeModal = 'signin'; openModal()">
+            <a class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer" @click.prevent="activeModal = 'signin'; openModal()">
               Sign in
             </a>
           </div>
